--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "vite-project",
+  "name": "chivent-technical",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
-  },
+"scripts": {
+  "dev": "vite",
+  "build": "vite build",
+  "predeploy": "npm run build",
+  "deploy": "gh-pages -d dist"
+}
+,
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
